--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.6.7'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'org.dddjava.jig-gradle-plugin' version '2022.5.1'
+    id 'org.dddjava.jig-gradle-plugin' version '2023.3.1'
 }
 
 group 'business-logic'
@@ -16,8 +14,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.3'
+
 }
 
 test {
